# skill-diff

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
product_docs/: context.md
src/agents/scraping/: job_scraper.py  sample.html
src/tools/: __init__.py  config.py  scraper.py  types.py
src/tools/fetchers/: __init__.py  fetcher.py  httpx_fetcher.py  playwright_fetcher.py
src/tools/filters/: __init__.py  filter.py  job_link_filter.py
src/tools/parsers/: __init__.py  html_parser.py  json_parser.py  parser.py
tests/integration/: test_scraper_integration.py
tests/unit/agents/: test_job_scraper.py
tests/unit/tools/: conftest.py
tests/unit/tools/fetchers/: __init__.py  test_httpx_fetcher.py  test_playwright_fetcher.py
tests/unit/tools/filters/: __init__.py  test_job_link_filter.py
tests/unit/tools/parsers/: conftest.py  test_json_parser.py
tests/unit/tools/scraper/: __init__.py  test_scraper.py
